# Mida

./: .eslintignore  .gitignore  CHANGELOG.md  CHANGELOG_TEMPLATE.md  README.md  ROADMAP.md  binding.sample.gyp  package-lock.json  package.json  tsconfig.json
examples/: listen-candles.js  listen-ticks.js  ticker-component.js
src/: README.md  main.ts
src/core/: Mida.ts
src/core/accounts/: MidaTradingAccount.ts
src/core/components/: MidaMarketComponentOracle.ts
src/core/decimals/: MidaDecimal.ts
src/core/orders/: MidaOrder.ts  MidaOrderDirectives.ts
src/core/periods/: MidaPeriodUtilities.ts
src/core/positions/: MidaPosition.ts  (+1 more)
src/playground/: MidaPlayground.ts  MidaPlaygroundEngine.ts  MidaPlaygroundEngineParameters.ts  README.md  USAGE.md
srcpp/: CMakeLists.txt  README.md  main.cpp  node.cpp
srcpp/core/bars/: MidaBar.h  MidaBarUtilities.h
srcpp/core/decimals/: MidaDecimal.cpp  MidaDecimal.h
srcpp/core/events/: MidaEvent.h
srcpp/core/indicators/: MidaIndicator.cpp  MidaIndicator.h
srcpp/core/orders/: MidaOrderDirection.h  MidaOrderPurpose.h
srcpp/core/pointers/: MidaPointer.cpp  MidaPointer.h
srcpp/core/strings/: MidaString.cpp  MidaString.h
srcpp/core/utilities/: MidaUtilities.h
srcpp/core/vectors/: MidaVector.cpp  MidaVector.h  MidaVector2.h  Vector.cpp  Vector.h
srcpp/indicators/simple-moving-average/: SimpleMovingAverage.cpp  SimpleMovingAverage.h
srcpp/indicators/williams-percent-range/: WilliamsPercentRange.cpp  WilliamsPercentRange.h
tests/playground/: MidaPlaygroundAccount.spec.ts  MidaPlaygroundEngine.spec.ts
(+19 files in other folders)
